# Passage

./: .env.example  .gitignore  DESIGN.en.md  DESIGN.ja.md  DESIGN.md  DESIGN.zh-CN.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
src/passage_pipeline/: _http.py  _rate_limit.py  acquire.py  chunk.py  embed.py  extract.py  ingest.py  main.py  models.py  progress.py  store.py
tests/: conftest.py  test_acquire.py  test_chunk.py  test_completed.py  test_embed.py  test_extract.py  test_ingest.py  test_integration_acquire.py  test_models.py  test_progress.py  test_rate_limit.py  test_store.py
