[project]
name = "passage"
version = "0.1.0"
description = "Discover literary passages through semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "boto3>=1.42.63",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passage_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::bs4.XMLParsedAsHTMLWarning",
]
markers = [
    "integration: tests that access external services (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
    "moto>=5.1.21",
    "pytest-asyncio>=1.3.0",
]
